src/tests/snapshots/parse__regex_has_escape_behavior.snap
---
created: "2019-04-04T18:42:26.929952900Z"
creator: insta@0.7.1
source: src/tests/parse.rs
expression: ast
---
Script {
    span: Span {
        lo: BytePos(
            5
        ),
        hi: BytePos(
            37
        ),
        ctxt: #0
    },
    body: [
        Expr(
            Lit(
                Regex(
                    Regex {
                        span: Span {
                            lo: BytePos(
                                5
                            ),
                            hi: BytePos(
                                10
                            ),
                            ctxt: #0
                        },
                        exp: Str {
                            span: Span {
                                lo: BytePos(
                                    6
                                ),
                                hi: BytePos(
                                    9
                                ),
                                ctxt: #0
                            },
                            value: Atom('foo' type=inline),
                            has_escape: false
                        },
                        flags: None
                    }
                )
            )
        ),
        Expr(
            Lit(
                Regex(
                    Regex {
                        span: Span {
                            lo: BytePos(
                                16
                            ),
                            hi: BytePos(
                                23
                            ),
                            ctxt: #0
                        },
                        exp: Str {
                            span: Span {
                                lo: BytePos(
                                    17
                                ),
                                hi: BytePos(
                                    22
                                ),
                                ctxt: #0
                            },
                            value: Atom('bar\.' type=inline),
                            has_escape: false
                        },
                        flags: None
                    }
                )
            )
        ),
        Expr(
            Lit(
                Regex(
                    Regex {
                        span: Span {
                            lo: BytePos(
                                29
                            ),
                            hi: BytePos(
                                36
                            ),
                            ctxt: #0
                        },
                        exp: Str {
                            span: Span {
                                lo: BytePos(
                                    30
                                ),
                                hi: BytePos(
                                    35
                                ),
                                ctxt: #0
                            },
                            value: Atom('ba\/z' type=inline),
                            has_escape: false
                        },
                        flags: None
                    }
                )
            )
        )
    ],
    shebang: None
}
