src/tests/snapshots/parse__string_has_escape_behavior.snap
---
source: src/tests/parse.rs
expression: ast
---
Script {
    span: Span {
        lo: BytePos(
            5,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
    body: [
        Expr(
            Lit(
                Str(
                    Str {
                        span: Span {
                            lo: BytePos(
                                5,
                            ),
                            hi: BytePos(
                                10,
                            ),
                            ctxt: #0,
                        },
                        value: Atom('foo' type=inline),
                        has_escape: false,
                    },
                ),
            ),
        ),
        Expr(
            Lit(
                Str(
                    Str {
                        span: Span {
                            lo: BytePos(
                                16,
                            ),
                            hi: BytePos(
                                22,
                            ),
                            ctxt: #0,
                        },
                        value: Atom('ba' type=inline),
                        has_escape: true,
                    },
                ),
            ),
        ),
        Expr(
            Lit(
                Str(
                    Str {
                        span: Span {
                            lo: BytePos(
                                28,
                            ),
                            hi: BytePos(
                                35,
                            ),
                            ctxt: #0,
                        },
                        value: Atom('ba\z' type=inline),
                        has_escape: true,
                    },
                ),
            ),
        ),
    ],
    shebang: None,
}
